--- a/calc.html
+++ b/calc.html
@@ -66,17 +66,18 @@
         <button onclick="press4()">4</button>
         <button onclick="press5()">5</button>
         <button onclick="press6()">6</button>
-        <button onclick="pressminus()">-</button>
+        <button onclick="pressminus()">−</button>
 
         <button onclick="press1()">1</button>
         <button onclick="press2()">2</button>
         <button onclick="press3()">3</button>
-        <button onclick="pressmultiply()">*</button>
+        <button onclick="pressmultiply()">×</button>
 
         <button onclick="press0()">0</button>
         <button onclick="pressdot()">.</button>
-        <button onclick="pressdivide()">/</button>
+        <button onclick="pressdivide()">÷</button>
         <button onclick="pressequal()">=</button>
+        
     </div>
     
 
